// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate options should throw an error on the "chunkFilename" option with "[]" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options.chunkFilename should be a non-empty string."
`;

exports[`validate options should throw an error on the "chunkFilename" option with "true" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options.chunkFilename should be a non-empty string."
`;

exports[`validate options should throw an error on the "esModule" option with "true" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options.esModule should be a boolean."
`;

exports[`validate options should throw an error on the "filename" option with "[]" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options.filename should be one of these:
   non-empty string | function
   Details:
    * options.filename should be a non-empty string.
    * options.filename should be an instance of function."
`;

exports[`validate options should throw an error on the "filename" option with "true" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options.filename should be one of these:
   non-empty string | function
   Details:
    * options.filename should be a non-empty string.
    * options.filename should be an instance of function."
`;

exports[`validate options should throw an error on the "inline" option with "true" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options.inline should be one of these:
   \\"no-fallback\\" | \\"fallback\\""
`;

exports[`validate options should throw an error on the "inline" option with "true" value 2`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options.inline should be one of these:
   \\"no-fallback\\" | \\"fallback\\""
`;

exports[`validate options should throw an error on the "publicPath" option with "[]" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options.publicPath should be one of these:
   string | function
   Details:
    * options.publicPath should be a string.
    * options.publicPath should be an instance of function."
`;

exports[`validate options should throw an error on the "publicPath" option with "true" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options.publicPath should be one of these:
   string | function
   Details:
    * options.publicPath should be a string.
    * options.publicPath should be an instance of function."
`;

exports[`validate options should throw an error on the "unknown" option with "/test/" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { worker?, publicPath?, filename?, chunkFilename?, inline?, esModule? }"
`;

exports[`validate options should throw an error on the "unknown" option with "[]" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { worker?, publicPath?, filename?, chunkFilename?, inline?, esModule? }"
`;

exports[`validate options should throw an error on the "unknown" option with "{"foo":"bar"}" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { worker?, publicPath?, filename?, chunkFilename?, inline?, esModule? }"
`;

exports[`validate options should throw an error on the "unknown" option with "{}" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { worker?, publicPath?, filename?, chunkFilename?, inline?, esModule? }"
`;

exports[`validate options should throw an error on the "unknown" option with "1" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { worker?, publicPath?, filename?, chunkFilename?, inline?, esModule? }"
`;

exports[`validate options should throw an error on the "unknown" option with "false" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { worker?, publicPath?, filename?, chunkFilename?, inline?, esModule? }"
`;

exports[`validate options should throw an error on the "unknown" option with "test" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { worker?, publicPath?, filename?, chunkFilename?, inline?, esModule? }"
`;

exports[`validate options should throw an error on the "unknown" option with "true" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { worker?, publicPath?, filename?, chunkFilename?, inline?, esModule? }"
`;

exports[`validate options should throw an error on the "worker" option with "[]" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options.worker should be one of these:
   non-empty string | object { type, options? }
   Details:
    * options.worker should be a non-empty string.
    * options.worker should be an object:
      object { type, options? }"
`;

exports[`validate options should throw an error on the "worker" option with "true" value 1`] = `
"Invalid options object. Worker Loader has been initialized using an options object that does not match the API schema.
 - options.worker should be one of these:
   non-empty string | object { type, options? }
   Details:
    * options.worker should be a non-empty string.
    * options.worker should be an object:
      object { type, options? }"
`;
